finished some problems